# byrdocs-check

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
check-cmt/: Cargo.toml
check-cmt/src/: main.rs  metadata.rs
check-pr/: Cargo.toml
check-pr/src/: main.rs  metadata.rs
src/: lib.rs  main.rs  metadata.rs
test/: test.yml
