[package]
name = "check-cmt"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.89"
image = "0.25.2"
md5 = "0.7.0"
pdfium-render = "0.8.25"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
rusoto = "0.24.2"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
structopt = "0.3.26"
tokio = { version = "1.40.0", features = ["full"] }
webp = "0.3.0"
